manifest/argo-events/event-source.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # - host: client.example.com
    - http:
        paths:
          - path: "/webhook/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: webhook-eventsource-svc                                                                                                                                                                                                                                                                                                                                                                                                                                                                        [...]
                port:
                  number: 12000
